error handling refactor TestReportService.java